--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
- 
-  
+
+
   <div class="header">
     <div class="container">
       <div class="menu">
@@ -29,9 +31,28 @@
       </div>
     </div>
   </div>
-  
+
+  <main>
+    <section class="hero">
+      <div class="instagram hero__instagram">instagram</div>
+      <div class="hero__content">
+        <div class="container">
+          <h1 class="hero__title">Турецкий ремонт <br>
+            в Ростове-на-дону</h1>
+          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от
+            стоимости материалов за счет организации работы</p>
+          <button class="button hero__button button--primary ">Рассчитать стоимость</button>
+          <button class="button hero__button button--outline ">Рассчитать стоимость</button>
+        </div>
+      </div>
+      <a href="" class="scroll-down"></a>
+    </section>
+
+  </main>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
